<resources>
    <string name="app_name" translatable="false">Spotted</string>
    <string name="nexts_stops">Prochains arrêts</string>
    <string name="start_time">Heure de départ</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="network_error">Erreur de réseau</string>
    <string name="no_data">Aucune donnée</string>
    <string name="center_map_on_loc">Centrer la position de la carte</string>
    <string name="vehicle_position">Marker de position du véhicule</string>
    <string name="show_all">Tout afficher</string>
    <string name="open_menu">Ouvrir le menu</string>
    <string name="loading">Chargement…</string>
    <string name="_0" translatable="false">0</string>
    <string name="network_logo">Logo du réseau de transport</string>
    <string name="compass_desc">Boussole</string>
    <string name="back">Retour</string>
    <string name="menu_filters">Filtrer les lignes</string>
    <string name="menu_favorites_lines">Lignes de bus favorites</string>
    <string name="menu_favorites_stops">Arrêts de bus favoris</string>
    <string name="menu_favorites_trains">Trains favoris</string>
    <string name="menu_credits">Crédits et règles</string>
    <string name="credits_content" translatable="false">Créé par <a href="https://github.com/Ynryo">Ynryo</a> dans le cadre d\'un projet scolaire\n\n Code source disponible sur <a href="https://github.com/Ynryo/ouestcefdpdetram">GitHub</a></string>
    <string name="follow_button_desc">Bouton pour suivre le véhicule</string>
    <string name="favorite_button_desc">Bouton pour ajouter la ligne aux favoris</string>
    <string name="close_button_desc">Fermer la vue détaillée</string>
    <string name="no_favorites_message">Aucune ligne favorite pour le moment.</string>
    <string name="next_stop_label">Prochain arrêt :</string>
    <string name="time_label">Heure</string>
    <string name="no_info_for_line" translatable="false">%s (aucune info)</string>
    <string name="favorite_load_error">Erreur de chargement des favoris: %s</string>
    <string name="expand_desc">Déplier</string>
    <string name="collapse_desc">Replier</string>
    <string name="guide_title" translatable="false">Guide d\'Utilisation de l\'Application</string>
    <string name="guide_introduction" translatable="false">Bienvenue sur "Où est ce fdp de tram" ! Cette application a été conçue pour vous permettre
        de suivre en temps réel les transports en commun (principalement les trams, mais aussi
        d\'autres réseaux si disponibles) dans votre région.
    </string>

    <string name="guide_main_map_title" translatable="false">1. La Carte Principale</string>
    <string name="guide_main_map_content" translatable="false">
        Sur la carte, vous verrez des icônes représentant les véhicules en circulation.
        \n\n•\tVisualisation des Véhicules: Chaque icône indique la position actuelle d\'un
        véhicule, souvent avec son numéro de ligne et sa destination.
        \n\n•\tInformations Détaillées: Appuyez sur une icône de véhicule pour afficher une
        fenêtre d\'information contenant des détails supplémentaires comme le prochain arrêt,
        l\'heure de départ estimée, et la destination finale.
    </string>

    <string name="guide_lateral_menu_title" translatable="false">2. Le Menu Latéral (Tiroir de Navigation)</string>
    <string name="guide_lateral_menu_content" translatable="false">
        Pour accéder aux options de l\'application, faites glisser votre doigt depuis le bord gauche
        de l\'écran, ou appuyez sur l\'icône de menu (trois lignes horizontales) située en haut à
        gauche de la carte.
    </string>

    <string name="guide_filters_title" translatable="false">2.1. Filtres des Réseaux</string>
    <string name="guide_filters_content" translatable="false">
        •\tAccès: Sélectionnez "Filtres" dans le menu latéral.
        \n\n•\tGestion des Réseaux: Vous y trouverez une liste des réseaux de transport
        disponibles, regroupés par région. Utilisez les interrupteurs à côté de chaque réseau pour
        afficher ou masquer les véhicules de ce réseau sur la carte.
        \n\n•\tTout Afficher/Masquer: Un interrupteur "Tout afficher" en haut de la liste vous
        permet d\'activer ou de désactiver la visibilité de tous les réseaux en une seule fois.
    </string>

    <string name="guide_favorites_title" translatable="false">2.2. Lignes Favorites</string>
    <string name="guide_favorites_content" translatable="false">
        •\tAccès: Sélectionnez "Favoris" dans le menu latéral.
        \n\n•\tAjouter un Favori: Pour ajouter une ligne à vos favoris, appuyez sur un véhicule
        sur la carte, puis sur l\'icône en forme de cœur ou d\'étoile dans la fenêtre d\'information
        du véhicule.
        \n\n•\tSuivi Rapide: Cette section affiche les véhicules des lignes que vous avez
        marquées comme favorites, avec leurs prochains arrêts et horaires, pour un suivi rapide.
    </string>

    <string name="guide_useful_tips_title" translatable="false">3. Conseils Utiles</string>
    <string name="guide_useful_tips_content" translatable="false">
        •\tZoom et Déplacement: Utilisez les gestes classiques (pincer/écarter pour zoomer,
        glisser pour déplacer) pour naviguer sur la carte.
        \n\n•\tActualisation des Données: L\'application met à jour les positions des véhicules
        en temps réel. Si vous remarquez un délai, une actualisation automatique est effectuée
        régulièrement.
    </string>
    <string name="city">Ville</string>
    <string name="clear_route_desc">Effacer le tracé de la ligne</string>
    <string name="platform_label">Voie</string>
    <string name="change_layers">Changer de couche GPS</string>
    <string name="unscheduled_stop">Arrêt supplémentaire</string>
    <string name="skipped_stop">Arrêt supprimé</string>
</resources>