<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="8dp"
    android:gravity="center_vertical"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:paddingEnd="8dp"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/tv_line_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:minWidth="50dp"
        android:padding="8dp"
        android:text="@string/_0"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/loading"
            android:textSize="18sp"
            android:textColor="?attr/colorOnSurface" />
        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/city"
            android:textSize="11sp"
            android:textColor="?attr/colorOnSurface" />
    </LinearLayout>


    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/icon_keyboard_arrow_up"
        android:rotation="180"
        android:contentDescription="@string/expand_desc"
        app:tint="?attr/colorOnSurface" />
</LinearLayout>